<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:background="#fff5f5f5" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/usertitle" android:background="@drawable/usertitle" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageButton android:id="@id/userbacklogin" android:background="#00000000" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="8.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="261.0dip" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_alignParentRight="true" />
    </RelativeLayout>
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_gravity="left" android:id="@id/textView2" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/default_account" />
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:id="@id/textView1" android:background="#ffd0e2f2" android:layout_width="fill_parent" android:layout_height="90.0dip" android:text="" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
        <ImageView android:id="@id/imageView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="18.0dip" android:src="@drawable/account" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
        <TextView android:layout_gravity="left" android:id="@id/defaultAccount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="" android:layout_centerVertical="true" />
    </RelativeLayout>
    <TextView android:textSize="18.0sp" android:textStyle="bold" android:layout_gravity="left" android:id="@id/textView3" android:paddingTop="12.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="25.0dip" android:text="@string/list_account" android:layout_weight="0.03" />
    <ScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/view3" android:background="#ffd6e8f8" android:paddingRight="12.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.48">
        <TableLayout android:id="@id/accountTable" android:layout_width="fill_parent" android:layout_height="wrap_content" android:stretchColumns="0" />
    </ScrollView>
    <ImageView android:id="@id/btnAddAccount" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/add_account" />
</LinearLayout>