<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <ImageView android:id="@id/imageView1" android:background="@drawable/titlelogo" android:layout_width="fill_parent" android:layout_height="wrap_content" />
        <ImageView android:id="@id/imageView2" android:background="@drawable/loginok" android:paddingBottom="0.0dip" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5" />
        <TextView android:textSize="25.0sp" android:textStyle="bold" android:textColor="#ffff0033" android:gravity="center" android:id="@id/login_time" android:background="@drawable/time" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="0.12" />
        <ImageView android:autoLink="all" android:id="@id/exit" android:layout_width="192.0dip" android:layout_height="0.0dip" android:layout_marginBottom="5.0dip" android:layout_weight="0.07" />
        <ImageView android:autoLink="all" android:id="@id/logout" android:layout_width="192.0dip" android:layout_height="0.0dip" android:layout_marginBottom="10.0dip" android:layout_weight="0.07" />
    </LinearLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/verify_lay" android:background="@color/black" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentBottom="true">
        <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:background="@drawable/shape" android:layout_width="320.0dip" android:layout_height="200.0dip" android:layout_marginTop="100.0dip">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_weight="0.2">
                <TextView android:textSize="16.0sp" android:id="@id/verify_help" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/str_verify_help" />
                <EditText android:textSize="16.0sp" android:id="@id/verify_code" android:layout_width="150.0dip" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.3">
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/verify_s1" android:paddingTop="20.0dip" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/red" android:gravity="center" android:layout_gravity="center" android:id="@id/verify_countdown" android:paddingTop="20.0dip" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
                <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:layout_gravity="center" android:id="@id/verify_s2" android:paddingTop="20.0dip" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <RelativeLayout android:gravity="center" android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="0.5"
              xmlns:android="http://schemas.android.com/apk/res/android">
                <Button android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_canel" android:background="@drawable/btn_bg_style" android:padding="0.0dip" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginLeft="30.0dip" android:text="@string/str_btn_canel" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
                <Button android:textSize="12.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@id/btn_enter" android:background="@drawable/btn_bg_style" android:padding="0.0dip" android:layout_width="80.0dip" android:layout_height="40.0dip" android:layout_marginRight="30.0dip" android:text="@string/str_btn_enter" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>